--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,20 +14,16 @@ dependencies = [
     "httpx>=0.28.1,<0.29.0",
     "selectolax>=0.3.27,<0.4.0",
     "pandas>=2.2.3,<3.0.0",
-    "python-dotenv>=1.0.1,<2.0.0"
+    "python-dotenv>=1.0.1,<2.0.0",
+    "matplotlib (>=3.10.0,<4.0.0)"
+]
+packages = [
+    { include = "vidya", from = "src" }
 ]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
-packages = [
-    { include = "vidya", from = "src" }
-]
-
-[project.scripts]
-vidya = "vidya.bot:main"
 
 [tool.poetry.group.dev.dependencies]
 ruff = ">=0.9.6,<1.0.0"
@@ -38,13 +34,15 @@ black = ">=24.0.0,<25.0.0"
 pre-commit = ">=3.6.0,<4.0.0"
 pytest-mock = ">=3.14.0,<4.0.0"
 
+[project.scripts]
+vidya = "vidya.bot:main"
+
 [tool.coverage.html]
 directory = "coverage_html"
 
 [tool.ruff]
 line-length = 88
 indent-width = 4
-
 target-version = "py312"
 
 [tool.ruff.format]
