--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "selectolax>=0.3.27,<0.4.0",
     "pandas>=2.2.3,<3.0.0",
     "python-dotenv>=1.0.1,<2.0.0",
-    "matplotlib (>=3.10.0,<4.0.0)"
+    "matplotlib (>=3.10.0,<4.0.0)",
+    "openai (>=1.63.2,<2.0.0)"
 ]
 packages = [
     { include = "vidya", from = "src" }
